--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,24 +17,13 @@
         android:text=""
         />
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:enabled="false"
-        android:gravity="right|bottom"
-        android:lines="2"
-        android:maxLines="2"
-        android:textSize="30sp"
-        android:text=""
-        android:fadingEdge="none" />
 
     <LinearLayout
         android:id="@+id/firstRow"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center|bottom">
+        android:orientation="horizontal"
+       >
 
         <Button
             android:id="@+id/buttonSeven"
