--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,5 @@
 <resources>
-
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.DeviceDefault.Light">
+    <style name="AppTheme" parent="android:Theme.DeviceDefault.Light.DarkActionBar">
     </style>
-
 </resources>
